--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 <body style="background-color: black;">
     <div id="content" style="display: block; width: 100%;"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.1/dist/phaser.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/phaser-plugin-update@1.0.1/dist/UpdatePlugin.js"></script>
+    <!-- LIBS GO HERE -->
+    <!-- PLUGINS GO HERE -->
 
-    <script>var __DEV__ = false;</script>
+    <!-- DEV GOES HERE -->
 
+    <!-- Your game's JavaScript files -->
     <script src="src/config.js"></script>
     <script src="src/utils.js"></script>
     <script src="src/GameScene.js"></script>
