Separate the Scene into it's own file - Will match tutorial 1's FINISHED code

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- DEV GOES HERE -->
 
     <!-- Your game's JavaScript files -->
+    <script src="src/GameScene.js"></script>
     <script src="src/main.js"></script>
 </body>
 </html>
