--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <!-- Your game's JavaScript files -->
     <script src="src/config.js"></script>
+    <script src="src/StartScene.js"></script>
     <script src="src/GameScene.js"></script>
     <script src="src/main.js"></script>
 </body>
