Info Overlay Scene (HUD)

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <!-- Your game's JavaScript files -->
     <script src="src/config.js"></script>
     <script src="src/StartScene.js"></script>
+    <script src="src/HUDScene.js"></script>
     <script src="src/GameScene.js"></script>
     <script src="src/main.js"></script>
 </body>
