Switch to modular JS

--- a/index.html
+++ b/index.html
@@ -35,10 +35,6 @@
     <!-- DEV GOES HERE -->
 
     <!-- Your game's JavaScript files -->
-    <script src="src/config.js"></script>
-    <script src="src/StartScene.js"></script>
-    <script src="src/HUDScene.js"></script>
-    <script src="src/GameScene.js"></script>
-    <script src="src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
